--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,6 +2,12 @@
     <div class="row">
         <div class="col-md-8">
             <h2>Contact List</h2>
+            <a href="/contact/add" class="btn btn-primary mb-2">Add Contact</a>
+            <% if (msg.length !== 0) { %>
+                <div class="alert alert-success" role="alert">
+                    <%= msg %> 
+                  </div>
+            <% } %>
             <table class="table">
                 <thead>
                     <tr>
